# ndk-samples

./: settings.gradle
hello-jni/app/: build.gradle
hello-jni/app/src/main/cpp/: CMakeLists.txt  hello-jni.cpp  libhello-jni.map.txt
hello-jni/app/src/main/java/com/example/hellojni/: HelloJni.kt
hello-jniCallback/app/: build.gradle
hello-jniCallback/app/src/main/cpp/: CMakeLists.txt  hello-jnicallback.cpp
hello-jniCallback/app/src/main/java/com/example/hellojnicallback/: JniHandler.java  MainActivity.java
