# ============================================================
# 【CMake 最低版本要求】
# ============================================================
# 指定构建此项目所需的最低 CMake 版本
cmake_minimum_required(VERSION 3.22.1)

# ============================================================
# 【项目定义】
# ============================================================
# 定义项目名称和使用的编程语言
# LANGUAGES CXX 表示使用 C++ 语言
project(HelloJniCallback LANGUAGES CXX)

# ============================================================
# 【包含辅助模块】
# ============================================================
# 加载项目自定义的 CMake 辅助脚本
# AppLibrary.cmake 定义了 add_app_library() 函数
include(AppLibrary)

# ============================================================
# 【查找依赖包】
# ============================================================
# 查找 base 模块，提供日志、宏定义等通用功能
find_package(base CONFIG REQUIRED)

# ============================================================
# 【创建 Native 库】
# ============================================================
# add_app_library 是项目自定义函数，封装了创建 Android 库的配置
#
# 参数说明：
#   hello-jnicallback - 库名，最终生成 libhello-jnicallback.so
#   SHARED - 构建为动态共享库
#   hello-jnicallback.cpp - 源文件
add_app_library(hello-jnicallback SHARED hello-jnicallback.cpp)

# ============================================================
# 【链接库依赖】
# ============================================================
# 指定链接时需要的库
target_link_libraries(hello-jnicallback
    PRIVATE
    base::base    # 项目基础库
    android       # Android 核心库
    log           # Android 日志库
)
